--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="https://dantmam.github.io/replica-google/style.css">
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 	</style>
@@ -27,7 +26,7 @@
 		</ul>
 	</header>
 
-	<div class="text-center mb-5 mt-5">
+	<div class="img-main text-center mb-5 mt-5">
 		<img src="img/google-img.png">
 	</div>
 
@@ -39,7 +38,7 @@
 	</div>
 
 
-	<section class="container social text-center">
+	<section class="container container-lista social text-center">
 		<div class="row">
 
 			<a href="http://google.com" class="back-social col-md-4 d-block">
@@ -49,6 +48,8 @@
 				</div>
 
 			</a>
+
+
 
 
 			<a href="http://instagram.com" class="back-social col-md-4  d-block">
@@ -67,12 +68,15 @@
 			</a>
 
 
+
 			<a href="http://twitter.com" class="back-social col-md-4  d-block">
 				<div class="mt-3">
 					<div class="back-icon"><img src="img/twitter.png" alt="" class="m-auto"></div>
 					<p>Twitter</p>
 				</div>
 			</a>
+
+
 
 
 			<a href="http://gmail.com" class="back-social col-md-4  d-block">
@@ -83,12 +87,16 @@
 			</a>
 
 
+
+
 			<a href="http://web.whatsapp.com" class="back-social col-md-4  d-block">
 				<div class="mt-3">
 					<div class="back-icon"><img src="img/whatsapp.png" alt="" class="m-auto"></div>
 					<p>Whatsapp</p>
 				</div>
 			</a>
+
+
 
 
 		</div>
